rnsc/test_data/integration/error/parser/class_body/with_errors_before_class_body3.rns
.class 42 with trailing tokens
unexpected
